--- a/JamFluidExample/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/JamFluidExample/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -142,7 +142,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=525.600 Y=312.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1291.200 Y=731.200
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1752,6 +1752,7 @@ LastLogListing=FBXImport
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
 RendererSettings=True
+GameMapsSettings=True
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
