--- a/JamFluidExample/Config/DefaultEngine.ini
+++ b/JamFluidExample/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-
+GameDefaultMap=/Game/FluidExample/Map/FluidExampleMap.FluidExampleMap
+EditorStartupMap=/Game/FluidExample/Map/FluidExampleMap.FluidExampleMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
